--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -22,5 +22,12 @@ ul.menu--main {
 }
 
 .footer {
+	border: 0;
+}
+
+.region-footer {
 	background: #f8f8f8;
+	border-radius: 4px;
+	border-color: #e7e7e7;
+	padding: 35px 0;
 }
