--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -28,6 +28,6 @@ ul.menu--main {
 .region-footer {
 	background: #f8f8f8;
 	border-radius: 4px;
-	border-color: #e7e7e7;
+	border: 1px solid #e7e7e7;
 	padding: 35px 0;
 }
