--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -193,3 +193,49 @@ input:checked + .slider:before {
 		display: block;
 	}
 }
+
+/**
+ * Hide <select> and submit-button
+ */
+#views-exposed-form-listen-page-block-1 .js-form-type-select {
+	display: none;
+}
+#views-exposed-form-listen-page-block-1 .form-submit {
+	display: none;
+}
+
+/**
+ * Pure styling, should probably be put in your theme stylesheet
+ * instead of in this module
+ */ 
+.pop-list {
+	display: block;
+  text-align: center;
+  margin: 0 auto 25px;
+  padding: 0;
+}
+.pop-list li {
+  margin: 25px 5px 25px 0;
+  float: none;
+  display: inline-block;
+  margin: 25px 5px 25px 0;
+  font-size: 16px;
+}
+.pop-list li a {
+  background-color: #fff;
+  height: 40px;
+  padding: 10px 16px 9px;
+  color: #532746;
+  line-height: 23px;
+  text-decoration: none;
+  border: 1px solid #532746;
+  cursor: pointer;
+}
+.pop-list li a.active {
+	background-color: #532746;
+  color: #fff;
+}
+.view-filter-articles .views-row{
+	float: left;
+	padding: 15px;
+}
