--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -239,7 +239,7 @@ input:checked + .slider:before {
 }
 .pop-list li a.active {
 	background-color: #f8f8f8;
-  font-weight: bold;
+  	border:2px solid #333;
 }
 .view-filter-articles .views-row{
 	float: left;
