--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -240,6 +240,7 @@ input:checked + .slider:before {
 .pop-list li a.active {
 	background-color: #f8f8f8;
   	border:2px solid #333;
+  	height: 101px;
 }
 .view-filter-articles .views-row{
 	float: left;
