--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -259,15 +259,17 @@ input:checked + .slider:before {
 a.homepage-music-button,
 a.homepage-sfx-button {
   display: inline-block;
-  background: #bc4c41;
-  border: 2px solid #e7e7e7;
+  background: #e60000;
+  border: 2px solid #ffb3b3;
   border-radius: 5px;
   color: #fff;
   padding: 10px;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 a.homepage-music-button {
   margin-right: 50px;
+  width: 274px;
 }
 
 a.homepage-sfx-button {
