--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -307,3 +307,7 @@ a.homepage-sfx-button span.maintheme-subtitle {
   line-height: 44px;
   padding-bottom: 3px;
 }
+
+#contact-message-feedback-form label {
+  font-size: 18px;
+}
