--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -309,6 +309,8 @@ a.homepage-sfx-button span.maintheme-subtitle {
 }
 
 #contact-message-feedback-form label,
-#contact-message-feedback-form input {
+#contact-message-feedback-form input,
+#contact-message-feedback-form textarea,
+#contact-message-feedback-form button {
   font-size: 18px;
 }
