--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -314,3 +314,7 @@ a.homepage-sfx-button span.maintheme-subtitle {
 #contact-message-feedback-form button {
   font-size: 18px;
 }
+
+#edit-preview {
+  display: none;
+}
