--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -247,8 +247,9 @@ input:checked + .slider:before {
   height: 100px;
 }
 .pop-list li a.active {
-	background-color: #f8f8f8;
-  	border:2px solid #333;
+	background-color: #e60000;
+  	border:2px solid #ffb3b3;
+    color: #fff;
   	height: 101px;
 }
 .view-filter-articles .views-row{
