--- a/themes/contrib/reddrock/templates/node--blog-post--teaser.html.twig
+++ b/themes/contrib/reddrock/templates/node--blog-post--teaser.html.twig
@@ -81,8 +81,8 @@
      {# /*<h4 class="title-primary-bg">{{ blog_label }}</h4>*/ #}
     <div class="content-inner-wrapper">
       {{ title_prefix }}
-        <h2{{ title_attributes }}{{ title_attributes.addClass('post-tile') }}>
-          {{ label }}
+        <h2{{ title_attributes }}{{ title_attributes.addClass('post-title') }}>
+          <a href="{{ url }}">{{ label }}</a>
         </h2>
       {{ title_suffix }}
       <div{{ content_attributes.addClass('content') }}>
