--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -330,6 +330,11 @@ input.volume {
 
 .views-row .teaser h2.post-title {
   display: block;
+  margin-top: 0;
+}
+
+.views-row .teaser h2.post-title a:hover {
+  text-decoration: none;
 }
 
 article.blog-post.teaser .blog-left {
