--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -389,3 +389,7 @@ article.blog-post.teaser .blog-right {
   vertical-align: top;
   padding-left: 25px;
 }
+
+#block-meetthereddrockteam {
+  margin: 40px 0;
+}
