--- a/themes/contrib/reddrock/css/style.css
+++ b/themes/contrib/reddrock/css/style.css
@@ -337,6 +337,14 @@ input.volume {
   margin-top: 0;
 }
 
+.captcha {
+  border: 0;
+}
+
+.captcha .panel-heading {
+  display: none;
+}
+
 .views-row .teaser h2.post-title a:hover {
   text-decoration: none;
 }
